# etos-test-runner

./: README.rst  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: build-publish.yml
src/etos_test_runner/: __init__.py  etr.py
src/etos_test_runner/lib/: executor.py  iut.py  iut_monitoring.py  log_area.py  testrunner.py
