[build-system]
requires = ["setuptools>=72", "wheel", "setuptools_scm[toml]>=8"]

[project]
name = "etos_test_runner"
dynamic = ["version"]
description = "ETOS Test Runner"
authors = [{name = "Tobias Persson", email = "tobias.persson@axis.com"}]
license = { text  = "Apache License, Version 2.0" }
readme = "README.rst"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "etos_lib==5.3.0",
    "cryptography>=42.0.4,<43.0.0",
    "packageurl-python==0.9.1",
    "jsontas>=1.4.1,<2.0.0",
    "opentelemetry-api==1.41.1",
    "opentelemetry-sdk==1.41.1",
    "opentelemetry-exporter-otlp==1.41.1",
    "opentelemetry-semantic-conventions==0.62b1",
    "opentelemetry-instrumentation-logging==0.62b1",
]

[options]
zip_safe = false
include_package_data = true
python_requires = ">=3.4"

[options.packages.find]
where = "src"
exclude = ["tests"]

[project.urls]
Documentation = "https://etos.readthedocs.io/"
Homepage = "https://github.com/eiffel-community/etos-test-runner"
Repository = "https://github.com/eiffel-community/etos-test-runner"

[project.scripts]

[project.optional-dependencies]
testing = ["pytest", "pytest-cov"]

[tool.black]
line-length = 100

[test]
extras = true

[tool.build_sphinx]
source_dir = "docs"
build_dir = "build/sphinx"

[tool.devpi.upload]
no-vcs = 1
formats = "bdist_wheel"

[tool.flake8]
exclude = [".tox", "build", "dist", ".eggs", "docs/conf.py"]

[tool.pytest.ini_options]
addopts = "--cov etos_test_runner --cov-report term-missing --verbose"
norecursedirs = ["dist", "build", ".tox"]
testpaths = ["tests"]

[tool.setuptools.package-data]
"*" = ["*.sh"]
